<resources>
    <string name="app_name">识别助手</string>
    <string name="str_back">&#xe66e;</string>
    <string name="str_image">&#xe626;</string>
    <string name="str_text">&#xe60d;</string>
    <string name="str_IDCard">&#xe605;</string>
    <string name="str_BankCard">&#xe603;</string>
    <string name="str_DriverLicense">&#xe629;</string>
    <string name="str_DrivingLicense">&#xe667;</string>
    <string name="str_LicensePlate">&#xe621;</string>
    <string name="str_BusinessLicense">&#xe604;</string>
    <string name="str_form">&#xe605;</string>
    <string name="str_TrainTicket">&#xe66d;</string>
    <string name="str_Passport">&#xe6a9;</string>
    <string name="str_enter">&#xe643;</string>
    <string name="str_share">&#xe679;</string>
    <string name="str_user">&#xeb2f;</string>
    <string name="str_phone">&#xe686;</string>
    <string name="str_weichat">&#xe637;</string>
    <string name="str_qq">&#xe680;</string>
    <string name="str_password">&#xe63e;</string>
    <string name="srt_result">识别结果</string>
    <string name="str_translation">翻译</string>
    <string name="str_home">识别</string>
    <string name="str_history">历史</string>
    <string name="str_me">我的</string>
    <string name="title_activity_login">登陆</string>
    <string name="countdown">倒计时</string>
    <string name="get">获取</string>
    <string name="save">保存</string>
    <string name="editNickname">更改昵称</string>
    <string name="userInfo">个人信息</string>
    <string name="nickname">昵称</string>
    <string name="account">账号</string>
    <string name="avatar">头像</string>
    <string name="logout">退出</string>
    <string name="about">关于</string>
    <string name="features">功能介绍</string>
    <string name="description">识别助手是一款用于识别图片的工具，可以拍照和相册选择图片识别，主要功能包括识别图像的类型，相识度，文字，翻译以及识别各种证件，简洁，高效。</string>

</resources>
