<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/bt_home"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_home_selector"
            android:text="@string/str_home" />

        <RadioButton
            android:id="@+id/bt_history"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_history_selector"
            android:text="@string/str_history" />

        <RadioButton
            android:id="@+id/bt_mine"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_mine_selector"
            android:text="@string/str_me" />

    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/LightGrey" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"/>


</RelativeLayout>
