<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:roundiv="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="55dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/gray"
            android:gravity="center_vertical|start"
            android:text="@string/str_back"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/userInfo"
            android:paddingLeft="8dp"
            android:textSize="20sp"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical|start"
            android:text="@string/avatar"
            android:textSize="20sp"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <com.example.sqlbrite.widgets.RoundImageView
                android:id="@+id/image_user"
                android:layout_height="match_parent"
                android:layout_width="55dp"
                android:layout_gravity="center_vertical|end"
                android:scaleType="centerCrop"
                roundiv:left_bottom_radius="6dp"
                roundiv:left_top_radius="6dp"
                roundiv:right_bottom_radius="6dp"
                roundiv:right_top_radius="6dp"
                android:layout_margin="2dp"/>
        </FrameLayout>

        <TextView
            android:id="@+id/edit_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/str_enter"
            android:textColor="@color/gray"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/LightGrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical|start"
            android:text="@string/nickname"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/nickname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical|end"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/edit_nickname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:textColor="@color/gray"
            android:gravity="center_vertical|center"
            android:text="@string/str_enter"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/LightGrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical|start"
            android:text="@string/account"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginEnd="25dp"
            android:gravity="center_vertical|end"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>
