<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="55dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textColor="@color/gray"
            android:gravity="center_vertical|start"
            android:text="@string/str_back"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/editNickname"
            android:layout_weight="5"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/save"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:background="@drawable/shape_button_border"
            android:text="@string/save"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_height="55dp"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:lines="1"/>

</LinearLayout>
