<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/phone_quick_login"
        android:layout_height="45dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/icon_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginRight="8dp"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:text="@string/str_phone"
            android:gravity="center_vertical|right"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="手机快捷登陆"
            android:gravity="center_vertical|left"
            android:textColor="@color/gray"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/LightGrey"/>

    <LinearLayout
        android:id="@+id/qq_quick_login"
        android:layout_height="45dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/icon_qq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginRight="8dp"
            android:text="@string/str_qq"
            android:gravity="center_vertical|right"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="QQ账号登陆"
            android:gravity="center_vertical|left"
            android:textColor="@color/gray"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/LightGrey"/>

    <LinearLayout
        android:id="@+id/weichat_quick_login"
        android:layout_height="45dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/icon_weichat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:textColor="@color/green"
            android:text="@string/str_weichat"
            android:gravity="center_vertical|right"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="微信账号登陆"
            android:gravity="center_vertical|left"
            android:textColor="@color/gray"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/LightGrey"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="取消"
        android:textColor="@color/gray"
        android:gravity="center_vertical|center"
        android:textSize="16sp"/>


</LinearLayout>
